domain name field removed while creating new tenant

--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -76,7 +76,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
+              <!-- <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Domain Name</label><span class="text-danger ml-2">*</span>
                 <input type="text" class="form-control" id="inputDomainName" formControlName="tenantDomainName">
                 <div class="validation-msg" style="color:red" *ngIf="tenantDomainName.touched && tenantDomainName.errors">
@@ -95,7 +95,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
