--- a/App/ClientApp/src/app/layout/tenants/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenants/list/list.component.html
@@ -30,11 +30,11 @@
               <td mat-cell *matCellDef="let tenant">{{tenant.TenantName}}</td>
             </ng-container>
   
-            <ng-container matColumnDef="domainName">
-              <th class="width30 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Domain Name </th>
+            <ng-container matColumnDef="primarycontact">
+              <th class="width30 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Primary Contact </th>
               <td mat-cell *matCellDef="let tenant">
-                <span *ngIf="tenant.TenantDomainName==null">-</span>
-                <span *ngIf="tenant.TenantDomainName!=null">{{tenant.TenantDomainName}} </span>
+                <span *ngIf="tenant.PrimaryEmailAddress==null">-</span>
+                <span *ngIf="tenant.PrimaryEmailAddress!=null">{{tenant.PrimaryEmailAddress}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="country">
