--- a/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
@@ -411,36 +411,14 @@
           </div>
         </div>
 
-        <div class="col-sm-5">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="mb-3">
-                <h6 class="mb-1" *ngIf="isSelected('Form')">Widget Type : Form</h6>
-                <h6 class="mb-1" *ngIf="isSelected('Table')">Widget Type : Table</h6>
-                <h6 class="mb-1" *ngIf="isSelected('LineGraph')">Widget Type : Line Graph</h6>
-                <h6 class="mb-1" *ngIf="isSelected('BarGraph')">Widget Type : Bar Graph</h6>
-                <h6 class="mb-1" *ngIf="isSelected('PieChart')">Widget Type : Pie Chart</h6>
-              </div>
-              <div class="card card-shadow preview-container float-right width100" style="position:initial;right:0;">
-                <div class="card-body d-flex justify-content-center align-items-center" *ngIf='selectedLink!=undefined'>
-                  <img *ngIf="isSelected('Form')" src="assets/images/AccountInfoWidget.PNG" class="img-fluid" id="imgWidget" />
-                  <img *ngIf="isSelected('Table')" src="assets/images/SummaryWidget.PNG" class="img-fluid" id="imgWidget" />
-                  <img *ngIf="isSelected('LineGraph')" src="assets/images/SavingTrendWidget.PNG" class="img-fluid" id="imgWidget" />
-                  <img *ngIf="isSelected('BarGraph')" src="assets/images/SpendingTrendWidget.PNG" class="img-fluid" id="imgWidget" />
-                  <img *ngIf="isSelected('PieChart')" src="assets/images/Analytics.png" class="img-fluid" id="imgWidget" />
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
+       
       </div>
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2"  *ngIf="dynamicWidgetDetails.Status=='New'" id="btnSave" (click)="navigationToEditDynamicWidget()">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="DeleteDynamicWidget()">Delete</button>
+      <button class="btn-footer-fill mr-2"  *ngIf="dynamicWidgetDetails.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Edit' }))" id="btnSave" (click)="navigationToEditDynamicWidget()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="(userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Delete' })"  id="btnDelete" (click)="DeleteDynamicWidget()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
