--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -33,7 +33,7 @@
             <td mat-cell *matCellDef="let dynamicwidget">V{{dynamicwidget.Version}}.0 </td>
           </ng-container>-->
           <ng-container matColumnDef="Product">
-            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef> Page Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.PageTypeName}}</td>
           </ng-container>
 
