--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -111,11 +111,15 @@
           *ngIf="IsMainMenu && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Log','Operation' : 'View'}))">
         <a> <span class='nav-icon icon-reportGenerations2' title="Logs"> </span> <span class='nav-title'>Logs</span> </a>
       </li>
-
+      <li [ngClass]="(URL=='/groupManagerDashboard')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantGroupManager" (click)="navigateTogroupManagerDashboard()">
+        <a> <span class='nav-icon icon-machine-dashboard2' title="Dashboard"> </span> <span class='nav-title'>Dashboard</span> </a>
+      </li>
       <li [ngClass]="(URL=='/tenants')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isTenantGroupManager" (click)="navigateToTenants()">
         <a> <span class='nav-icon icon-users-line2' title="Tenants"> </span> <span class='nav-title'>Tenants</span> </a>
       </li>
-
+      <li [ngClass]="(URL=='/instanceManagerDashboard')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstanceTenantManager" (click)="navigateToinstanceManagerDashboard()">
+        <a> <span class='nav-icon icon-machine-dashboard2' title="Dashboard"> </span> <span class='nav-title'>Dashboard</span> </a>
+      </li>
       <li [ngClass]="(URL=='/tenantgroups')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu && isInstanceTenantManager" (click)="navigateToTenantGroups()">
         <a> <span class='nav-icon icon-users-line2' title="Tenant Groups"> </span> <span class='nav-title'>Tenant Groups</span> </a>
       </li>
